--- a/discuss/package.json
+++ b/discuss/package.json
@@ -12,6 +12,10 @@
     "@auth/core": "^0.40.0",
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
